Code to Push Data to Kafka Topic on Request

--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -7,3 +7,20 @@ quarkus.datasource.min-size=2
 #quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 #quarkus.hibernate-orm.sql-load-script=import.sql
+
+
+
+# Configure the Kafka sink (we write to it)
+mp.messaging.outgoing.employee-channel.connector=smallrye-kafka
+mp.messaging.outgoing.employee-channel.topic=employeeTopic
+mp.messaging.outgoing.employee-channel.value.serializer=org.gl.demo.model.EmployeeListSerializer
+
+#mp.messaging.outgoing.employee-channel.value.serializer=org.gl.demo.model.EmployeeSerializer
+
+#mp.messaging.outgoing.employee-channel.value.serializer=org.apache.kafka.common.serialization.Serializer
+
+
+# Configure the Kafka source (we read from it)
+mp.messaging.incoming.employeeTopic.connector=smallrye-kafka
+mp.messaging.incoming.employeeTopic.topic=employeeTopic
+mp.messaging.incoming.employeeTopic.value.deserializer=org.gl.demo.model.EmployeeDeserializer
