saving data on Kafka in JsonString Format

--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -8,10 +8,21 @@ quarkus.datasource.min-size=2
 quarkus.hibernate-orm.log.sql=true
 #quarkus.hibernate-orm.sql-load-script=import.sql
 
-
+quarkus.http.port = 9080
 
 # Configure the Kafka sink (we write to it)
 mp.messaging.outgoing.employee-channel.connector=smallrye-kafka
-mp.messaging.outgoing.employee-channel.topic=employeeTopic
-mp.messaging.outgoing.employee-channel.value.serializer=org.gl.demo.model.EmployeeListSerializer
+mp.messaging.outgoing.employee-channel.topic=employeeTopic3
+#mp.messaging.outgoing.employee-channel.value.serializer=org.gl.demo.model.EmployeeListSerializer
+mp.messaging.outgoing.employee-channel.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.employee-channel.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
+
+# Configure the Kafka source (we read from it)
+#mp.messaging.incoming.incomingStream.connector=smallrye-kafka
+#mp.messaging.incoming.incomingStream.topic=employeeTopic2
+#mp.messaging.incoming.incomingStream.value.deserializer=org.gl.demo.model.EmployeeListDeserializer
+
+
 
